# swift-tokenizers

./: .gitignore  .pre-commit-config.yaml  Package.swift  README.md
.github/workflows/: ci.yml  rust-core-release.yml  rust-release.yml
RustCorePackage/: Package.swift
Sources/Tokenizers/: BPETokenizer.swift  BertTokenizer.swift  ByteEncoder.swift  Config.swift  Decoder.swift  Normalizer.swift  PostProcessor.swift  PreTokenizer.swift  RustBackedTokenizer.swift  String+PreTokenization.swift  SwiftTokenizerBackend.swift  TokenLattice.swift  Tokenizer.swift  TokenizerCompatibility.swift  TokenizerRuntimeConfiguration.swift  Trie.swift  UnigramTokenizer.swift  YYJSONParser.swift
Sources/TokenizersFacade/: AutoTokenizerDirectoryLoader.swift  BackendSelection.swift  Exports.swift
Tests/Benchmarks/: Benchmarks.swift  DownloaderBridge.swift  SubsystemBenchmarkSupport.swift  TokenizerBridge.swift
Tests/TokenizersTests/: BertTokenizerTests.swift  ChatTemplateTests.swift  DecoderTests.swift  FactoryTests.swift  NormalizerTests.swift  PostProcessorTests.swift  PreTokenizerTests.swift  TokenizerTests.swift  TrieTests.swift  YYJSONParserTests.swift
TokenizersRustBinary/: Package.swift
rust/swift-tokenizers-rust/: Cargo.toml
rust/swift-tokenizers-rust/include/: TokenizersRust.h  module.modulemap
rust/swift-tokenizers-rust/src/core/: abi.rs  error.rs  sidecars.rs  template.rs  tokenizer_core.rs
scripts/: build-rust-core-xcframework.sh  build-rust-xcframework.sh  package-rust-core-release.sh  package-rust-release.sh  rust-release-notes.py
(+9 files in other folders)
