[package]
name = "tokenizers_rust"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
publish = false

[lib]
name = "tokenizers_rust"
crate-type = ["staticlib"]

[dependencies]
minijinja = { version = "2.19.0", default-features = false, features = ["adjacent_loop_items", "builtins", "deserialization", "json", "macros", "multi_template", "serde", "std_collections"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokenizers = { version = "0.22.0", default-features = false, features = ["fancy-regex"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
